force-app/main/default/objects/Execution_Log__c/fields/CPU_Used__c.field-meta.xml
<CustomField>
    <fullName>CPU_Used__c</fullName>
    <label>CPU Used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>