force-app/main/default/objects/Execution_Log__c/fields/DML_Count__c.field-meta.xml
<CustomField>
    <fullName>DML_Count__c</fullName>
    <label>DML Count</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>