force-app/main/default/objects/Execution_Log__c/fields/Execution_Time__c.field-meta.xml
<CustomField>
    <fullName>Execution_Time__c</fullName>
    <label>Execution Time</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>