force-app/main/default/objects/Execution_Log__c/fields/SOQL_Count__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Count__c</fullName>
    <label>SOQL Count</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>